--- a/.editorconfig
+++ b/.editorconfig
@@ -16,3 +16,7 @@ tab_width = 2
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.sql]
+max_line_length = off
+trim_trailing_whitespace = false
