--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "redis": "^4.6.7",
     "urllib": "^3.17.1"
   }
