--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "redis": "^4.6.7",
-    "urllib": "^3.17.1"
+    "urllib": "^3.17.1",
+    "winston": "^3.10.0"
   }
 }
